--- a/md/07-素材库.md
+++ b/md/07-素材库.md
@@ -1,5 +1,9 @@
 # 运营法宝③——素材库
 
 ## 什么是素材库
-
+素材库是开发者或用户上传的图片放置的地方，开发者只需要将图片上传到素材库即可获取本地图片链接。可支持处理的原图片格式有psd、jpeg、png、gif、webp、tiff、bmp。（webp不支持动图）
+**注意**：支持的最大 gif 帧数为 200，超过 200，处理结果只返回原图哦亲。效果如下
+![图片](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524092848_04e94e3b5606b731428d50c7f34f8d41.png)
 ## 图片上传
+在“素材库-图片上传”这里点击<font face="黑体" color=green>**选择文件**</font>后选择要上传的图片，再点击<font face="黑体" color=green>**上传图片**</font>即可上传图片并得到其图片链接。
+![图片](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524092555_51c234d589bfaf4f8f96d018cb780d0b.png)![上传图片](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524085820_3cb9574eb951e2cd0b73a7add2283ae3.png)
