--- a/md/02-注册与登录.md
+++ b/md/02-注册与登录.md
@@ -1,30 +1,66 @@
+[toc]
 # 注册与登录
 
 ## 会员注册
+1. 会员的注册很简单，只需要在登录页面的下方选择**立即注册**，即可跳转至
+用户的注册页面（如下）。
+![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524103706_05a58bde242875650e64d0cc0c347938.png)
+
+2. 填写您的个人资料
++ 会员账号
++ 密码：注意密码必须包含六位字符以上
++ 邮箱：非常重要，后面如果需要重置密码，忘记密码找回的时候需要用到
++ 真实姓名：方便管理员知道你是谁
++ 注册备注
+
+
+3. 填写完毕后，可以看到注册成功提示，接下来可以联系您的管理员进行授权，然后就可以登录啦。
+![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524103733_8e2908c9c35c1bdfb055d7a2f94dab95.png)
 
 
 
-## 管理员注册
+## 管理员注册控制
 
 
-### 会员注册权限控制
+
 
 ## 会员登录
 
+
 ### 会员登录
 
+如果您有会员账号，并且具有登录的权限的话，可以直接登录进入小白管家！
 
 ### 忘记密码
 
-### 会员删除（**危险操作**）
+*程序员哥哥夜以继日开发中*
 
 ### 登录失败原因及处理
 
-## 管理员登录
+1. 账号问题：注意我们登录小白管家账号是使用我们的会员账号，如果您是开发者，注意登录
+的时候也是使用您的会员或管理员账号，而不是使用您的开发者账号登录！
 
-### 管理员登录权限控制
+2. 账号不存在：说明您还未注册账号，请参考上面的注册教程！
+
+3. 登录权限问题：如果提示当前账号无登录权限，请联系管理员开放登录权限。这说明了您的管理员还没有授权登录权限给您的账号，请联系您的管理员授权！
+
+4. 其他问题：如果还有其他问题，欢迎加群一起交流哦！
+
+## 管理员登录控制
+
+小白管家为管理员提供了一系列的登录注册控制，方便您对会员的登录与注册进行管理。
 
 ### 登录日志
+
+管理员可以进入控制面板，可以看到最近会员的登录日志，包括会员登录的时间，登录的IP地址，
+登录是否成功，失败或异常的提示，方便您对会员登录的管理！
+![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524103641_e5286f19dbe3e22570c2b6c8089b1e7d.png)
+
+### 登录权限控制
+
+### 会员删除（**危险操作**）
+
+
 
 ### 会员管理
 
