--- a/md/02-注册与登录.md
+++ b/md/02-注册与登录.md
@@ -2,8 +2,7 @@
 # 注册与登录
 
 ## 会员注册
-1. 会员的注册很简单，只需要在登录页面的下方选择**立即注册**，即可跳转至
-用户的注册页面（如下）。
+1. 会员的注册很简单，只需要在登录页面的下方选择**立即注册**，即可跳转至用户的注册页面（如下）。
 ![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524103706_05a58bde242875650e64d0cc0c347938.png)
 
 2. 填写您的个人资料
@@ -20,6 +19,14 @@
 
 
 ## 管理员注册控制
+
+如果您是管理员，您可以对您的会员注册进行一系列的控制，包括：
++ 是否允许注册：如果您选择关闭允许会员注册，将在登录页面隐藏注册入口，无法进行新客注册！
++ 注册页是否显示邮箱输入框：如果您选择关闭，用户的注册页面将不会显示邮箱输入框！
++ 注册页是否显示真实姓名输入框：如果您选择关闭，用户的注册页面将不会显示真实姓名输入框！
++ 注册页是否显示备注输入框：如果您选择关闭，用户的注册页面将不会显示备注输入框！
++ 注册页成功后是否发送邮件给新客：如果关系，将不会给会员发送注册成功邮件！
++ 新客注册成功后发送邮件通知：在这儿您可以配置邮箱，新客注册成功后会发送注册成功邮箱到配置的邮箱地址中！
 
 
 
@@ -46,24 +53,48 @@
 
 4. 其他问题：如果还有其他问题，欢迎加群一起交流哦！
 
+
+
 ## 管理员登录控制
 
 小白管家为管理员提供了一系列的登录注册控制，方便您对会员的登录与注册进行管理。
 
 ### 登录日志
 
-管理员可以进入控制面板，可以看到最近会员的登录日志，包括会员登录的时间，登录的IP地址，
-登录是否成功，失败或异常的提示，方便您对会员登录的管理！
+管理员可以进入控制面板，可以看到最近会员的登录日志，包括会员登录的时间，登录的IP地址，登录是否成功，失败或异常的提示，方便您对会员登录的管理！
 ![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524103641_e5286f19dbe3e22570c2b6c8089b1e7d.png)
+
+
 
 ### 登录权限控制
 
-### 会员删除（**危险操作**）
+小白管家为管理员提供了多级别多种登录控制方式！
+
+1. 开放级别
+
++ 指定会员，只允许会员白名单登录小白数据管家
++ 全部会员，允许全部注册会员登录小白数据管家
+
+2. 白名单：如果您开放级别选择的是指定会员登录，您可以在添加会员白名单这儿添加您所允许登录的会员账号，多个账号要换行分开，添加之后下方的已开放会员中会显示你允许登录的会员，也可以取消勾选移除会员，不在白名单里的会员无法登录！
+
+3. 黑名单：在黑名单这儿，你可以对您的会员拉黑，这样您的会员将无法登录小白管家，当你添加之后下方的已禁止会员会显示您禁止登录的会员，也可以取消勾选移除会员，在黑名单里的会员无法登录。请注意， 黑名单对管理员无效！
 
 
+### 更多问题
+
+如果还有其他问题，欢迎加群一起交流哦！
+
+
+## 管理员会员管理
 
 ### 会员管理
 
+在控制面板的会员管理，您可以看到您的所有的注册会员，在这儿您可以为您的会员重置密码！
+
 ### 会员密码重置
 
-### 更多问题
+您也可以在会员密码重置这里，对特定的会员账号进行密码重置！
+
+### 会员删除（**危险操作**）
+
+小白管家为管理员提供了删除会员的功能，但是请慎重使用，因为会员一旦删除，无法恢复，请三思而后行！！！
