--- a/md/01-介绍.md
+++ b/md/01-介绍.md
@@ -1,12 +1,17 @@
+
+
 # 小白管家——新一代数据运营平台
  ![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524103755_3164306cba36cde4c2baf2d9a9dd09d3.png)
 
 
 ## 介绍
+小白数据管家，为非技术人员而提供的专属数据运营平台，使用对象是开发者的应用会员和应用管理员。
 
 ## 主要功能
-
+小白数据管家是数据运营平台，主要提供给你的运营团队进行数据管理和日常维护。
+![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524143441_249cd9137e29719f672fc431a668395d.png)
 ## 使用场景
-
+首次使用，请用管理员登录！管理员拥有小白管家全部权限；普通会员需要管理员授权后方可登录使用。查看我的管理员和普通会员
 ## 联系方式
-
+扫码添加小白君！即刻获取更多小白管家相关资讯！
+![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190522225055_67f68dbbb8a9f9e6cf52b04f48fbe3a1.jpeg)
