--- a/md/05-模型统计报表.md
+++ b/md/05-模型统计报表.md
@@ -1,1 +1,16 @@
+
 # 运营法宝①——统计报表
+统计报表效果图
+![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524133734_9ec94a757fb3e804db89d520c8b208bc.jpeg)
+
+## 统计报表介绍
+统计报表是将自己的数据**一键生成的**可视化图表，支持柱状图，线状图等展现形式，让数据运营更加直观的看到数据的变化！
+图表信息完全绑定数据，可将数字类型的**汇总**（如：今日营业额：10000），也可计算非数字类型的**个数**（如：总单数-10）
+快来看看怎么生成这个黑科技吧！
+## 如何生成统计报表
+暂时只能在[小白开放平台](http://open.yesapi.cn/?r=Data/TableReportManager)上面生成，很快将开发出在小白管家上更加强大的填加功能！[点此链接前往创建](http://open.yesapi.cn/?r=Data/TableReportManager)
+![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524135349_3ea680af715f77b443845e04877178ef.png)![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524135709_16371794c99ce17f6208d5c699298977.jpeg)![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524140316_57438b062463cfe676886dc4bb67e6f2.jpeg)
+点击确认后回到小白管家即可看到统计报表效果图。
+
+## 还有问题？
+如果还有任何疑问，都可随时通过QQ交流群（660311764）、[用户留言](http://open.yesapi.cn/?r=Site/Contact)、[小白社区](http://qa.phalapi.net/?/explore/category-7)、微信群等多个渠道向我们反馈。我们将会尽快反馈和响应，谢谢！
