--- a/md/03-模型配置.md
+++ b/md/03-模型配置.md
@@ -1,27 +1,78 @@
 # 管理员管理神器——模型配置
-    请注意，所有的模型配置都需要具备管理员权限，如果您在使用的过程中，遇到某些操作权限不足，请先联系您的管理员，
-    或者加群交流如果您是管理员，操作的过程中有遇到什么问题可以联系我们开发者或者进群交流！
+
+请注意，所有的模型配置都需要具备管理员权限，如果您在使用的过程中，遇到某些操作权限不足，请先联系您的管理员，或者加群交流。如果您是管理员，操作的过程中有遇到什么问题可以联系我们开发者或者进群交流！
 
 
 ## 模型控制台——模型控制配置
 
-+ 菜单入口控制
-+ 显示位置控制
-+ 私人数据控制
-+ 发表权限控制
-+ 编辑权限控制
-+ 删除权限控制
-+ 列表权限控制（包含搜索权限）
-+ 查看权限控制
-+ 列表分页控制
+进入控制面板的模型控制配置，我们可以看到一个大的列表，这里是我们所有的模型，进入对应的模型的编辑页，我们可以对每个模型进行不同的配置。下面会对每个控制的功能进行详细的解释！
+
+ <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524135654_c80eac3d64f9248e380e03594417b317.png)数据模型控制列表</div>
+
+### 菜单入口控制
+  管理员可以在这控制每个模型是否能让会员看到，如果关系显示菜单入口，模型将不会在数据页菜单显示，会员无法操作该模型！
+
+ <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524145453_f748e70331b8a1541f67a096fe7ddf1b.png)关闭模型菜单入口演示</div>
+
+### 显示位置控制
+  管理员也可以控制每个模型在菜单中的显示位置，比如我们想让某个模型的位置靠前一点，我们就可以在显示位置里面输入一个数值，这个数值越小则显示的位置越靠前，注意这个数字必须大于0。如果有两个数值相同，这两个相同的模型顺序前后顺序根据系统默认的顺序排列。如果没有设置显示数值，菜单的模型排列也将使用默认的排序方式！
+  
+ <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524150556_296e8532d5854ca5d876042b479d3ec8.png)显示位置控制演示</div>
+  
+  
+### 私人数据控制
+ 
+
+
+### 发表权限控制
+ 如果我们想控制会员的模型发表权限，我们可以在发表权限这里进行控制。当关闭发表权限后，会员的数据列表页将不会出现新增按钮，也就是会员无法新增数据。
+ 
+ <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524151536_c85a126f20b657eaa8de481d44a6c9ed.png)发表权限控制演示</div>
+ 
+ 
+### 查看权限控制
+如果我们想控制会员的查看权限，我们可以在查看权限开关这儿进行控制。当关闭查看权限后，会员的列表页将不会出现查看按钮，也就是会员无法查看全部的数据，后面可搭配字段的控制，可以实现只提供部分数据给会员查看。
+
+ <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524173314_af8ee04219a765936f81381b8bcc9010.png)查看权限控制演示</div>
+ 
+### 编辑权限控制
+
+如果我们想控制会员的编辑权限，我们可以在编辑权限开关这里进行控制。当关闭编辑权限后，会员的数据列表页和详情页都将不会出现编辑按钮，也就是会员无法编辑数据。
+
+ <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524171236_d39626e8b9740b0095afb176935fc668.png)编辑权限控制演示1</div>
+ 
+  <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524171551_6c666d439ad017c476604d40b92f6bb6.png)编辑权限控制演示2</div>
+ 
+### 删除权限控制
+如果我们先控制会员的删除权限，保证数据的安全，我们可以在删除权限开关这儿进行控制。当关闭删除权限后，会员的数据列表页将不会出现批量删除按钮，也就是会员无法删除数据。
+ <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524172206_c8610d39924b44ee9903c78cbfe399dd.png)编辑权限控制演示1</div>
+
+
+
+### 列表分页控制
+我们可以通过列表分页控制来控制列表页展示数据的条数，现在可以控制每个数据页只展示10,20,50,100,120,150,200,250,500条数据。
+
+ <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524174549_6a84b14d0e03b20768344f91cda890aa.png)分页控制演示1</div>
+
+
+### 列表权限控制（最高限制）
+当我们关闭了列表的权限之后，会员将无法查看与操作数据。
+ <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524172524_1a52770d87e8730863b5a90668f7cc94.png)编辑权限控制演示1</div>
+
+
+
+
+### 列表页顶部引导提示
+
+### 列表页底部引导提示
 
 ## 魔法装饰控制中心——字段个性化配置
 
-+ 显示位置控制
-+ 列表页显示控制
-+ 搜索框显示控制
-+ 详情页显示控制
-+ 添加页显示控制
-+ 编辑页显示控制
-+ 选择合适的表单控件
-+ 如何让字段显示更漂亮（格式化）
+1. 显示位置控制
+2. 列表页显示控制
+3. 搜索框显示控制
+4. 详情页显示控制
+5. 添加页显示控制
+6. 编辑页显示控制
+7. 选择合适的表单控件
+8. 如何让字段显示更漂亮（格式化）
