--- a/md/03-模型配置.md
+++ b/md/03-模型配置.md
@@ -7,18 +7,27 @@
 
 进入控制面板的模型控制配置，我们可以看到一个大的列表，这里是我们所有的模型，进入对应的模型的编辑页，我们可以对每个模型进行不同的配置。下面会对每个控制的功能进行详细的解释！
 
- <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524135654_c80eac3d64f9248e380e03594417b317.png)数据模型控制列表</div>
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524135654_c80eac3d64f9248e380e03594417b317.png">
+<p align="center">数据模型控制列表</p>
+</div>
 
 ### 菜单入口控制
   管理员可以在这控制每个模型是否能让会员看到，如果关系显示菜单入口，模型将不会在数据页菜单显示，会员无法操作该模型！
 
- <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524145453_f748e70331b8a1541f67a096fe7ddf1b.png)关闭模型菜单入口演示</div>
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524145453_f748e70331b8a1541f67a096fe7ddf1b.png">
+<p align="center">关闭模型菜单入口演示</p>
+</div>
 
 ### 显示位置控制
   管理员也可以控制每个模型在菜单中的显示位置，比如我们想让某个模型的位置靠前一点，我们就可以在显示位置里面输入一个数值，这个数值越小则显示的位置越靠前，注意这个数字必须大于0。如果有两个数值相同，这两个相同的模型顺序前后顺序根据系统默认的顺序排列。如果没有设置显示数值，菜单的模型排列也将使用默认的排序方式！
   
- <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524150556_296e8532d5854ca5d876042b479d3ec8.png)显示位置控制演示</div>
   
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524150556_296e8532d5854ca5d876042b479d3ec8.png">
+<p align="center">显示位置控制演示</p>
+</div>
   
 ### 私人数据控制
  
@@ -27,37 +36,63 @@
 ### 发表权限控制
  如果我们想控制会员的模型发表权限，我们可以在发表权限这里进行控制。当关闭发表权限后，会员的数据列表页将不会出现新增按钮，也就是会员无法新增数据。
  
- <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524151536_c85a126f20b657eaa8de481d44a6c9ed.png)发表权限控制演示</div>
- 
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524151536_c85a126f20b657eaa8de481d44a6c9ed.png">
+<p align="center">发表权限控制演示</p>
+</div>
  
 ### 查看权限控制
 如果我们想控制会员的查看权限，我们可以在查看权限开关这儿进行控制。当关闭查看权限后，会员的列表页将不会出现查看按钮，也就是会员无法查看全部的数据，后面可搭配字段的控制，可以实现只提供部分数据给会员查看。
-
- <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524173314_af8ee04219a765936f81381b8bcc9010.png)查看权限控制演示</div>
  
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524173314_af8ee04219a765936f81381b8bcc9010.png">
+<p align="center">查看权限控制演示</p>
+</div>
+
 ### 编辑权限控制
 
 如果我们想控制会员的编辑权限，我们可以在编辑权限开关这里进行控制。当关闭编辑权限后，会员的数据列表页和详情页都将不会出现编辑按钮，也就是会员无法编辑数据。
 
- <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524171236_d39626e8b9740b0095afb176935fc668.png)编辑权限控制演示1</div>
- 
-  <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524171551_6c666d439ad017c476604d40b92f6bb6.png)编辑权限控制演示2</div>
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524171236_d39626e8b9740b0095afb176935fc668.png">
+<p align="center">编辑权限控制演示1</p>
+</div>
+
+
+  
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524171551_6c666d439ad017c476604d40b92f6bb6.png">
+<p align="center">编辑权限控制演示2</p>
+</div>
  
 ### 删除权限控制
 如果我们先控制会员的删除权限，保证数据的安全，我们可以在删除权限开关这儿进行控制。当关闭删除权限后，会员的数据列表页将不会出现批量删除按钮，也就是会员无法删除数据。
- <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524172206_c8610d39924b44ee9903c78cbfe399dd.png)编辑权限控制演示1</div>
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524172206_c8610d39924b44ee9903c78cbfe399dd.png">
+<p align="center">编辑权限控制演示1</p>
+</div>
 
 
 
 ### 列表分页控制
 我们可以通过列表分页控制来控制列表页展示数据的条数，现在可以控制每个数据页只展示10,20,50,100,120,150,200,250,500条数据。
 
- <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524174549_6a84b14d0e03b20768344f91cda890aa.png)分页控制演示1</div>
+ 
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524174549_6a84b14d0e03b20768344f91cda890aa.png">
+<p align="center">分页控制演示1</p>
+</div>
 
 
 ### 列表权限控制（最高限制）
 当我们关闭了列表的权限之后，会员将无法查看与操作数据。
- <div align="center">![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524172524_1a52770d87e8730863b5a90668f7cc94.png)编辑权限控制演示1</div>
+
+ 
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524172524_1a52770d87e8730863b5a90668f7cc94.png">
+<p align="center">列表权限控制演示</p>
+</div>
 
 
 
