--- a/md/03-模型配置.md
+++ b/md/03-模型配置.md
@@ -95,11 +95,19 @@
 </div>
 
 
-
-
 ### 列表页顶部引导提示
+如果我们想在列表顶部给会员添加一些引导或提示，我们可以在模型控制配置里面列表页顶部引导提示输入框中输入我们要提示的内容，可以插入图片，文字等。
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524183228_2d65ad78da8bf103f025cbe311cc900e.png">
+<p align="center">列表页顶部引导提示演示</p>
+</div>
 
 ### 列表页底部引导提示
+如果我们想在列表底部给会员添加一些引导或提示，我们可以在模型控制配置里面列表页底部引导提示输入框中输入我们要提示的内容。可以插入图片，文字等。
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524183240_b6c27b739c1064198e8c6643f4a1536e.png">
+<p align="center">列表页底部引导提示演示</p>
+</div>
 
 ## 魔法装饰控制中心——字段个性化配置
 
