--- a/md/03-模型配置.md
+++ b/md/03-模型配置.md
@@ -30,6 +30,7 @@
 </div>
   
 ### 私人数据控制
+ 管理员可以对用户数据是否绑定进行控制，如果设置为不绑定（共享数据）那么会员可以操作和查看共享的所有数据。
  
 
 
@@ -111,11 +112,58 @@
 
 ## 魔法装饰控制中心——字段个性化配置
 
-1. 显示位置控制
-2. 列表页显示控制
-3. 搜索框显示控制
-4. 详情页显示控制
-5. 添加页显示控制
-6. 编辑页显示控制
-7. 选择合适的表单控件
-8. 如何让字段显示更漂亮（格式化）
+小白管家不仅给管理员提供了模型的配置管理，而且还提供了针对模型的每一个字段的配置管理。下面会对每个控制的功能进行详细的解释！
+
+### 显示位置控制
+与模型的显示控制一样，我们可以控制模型列表的每个字段在列表页的显示位置。，比如我们想让某个字段在列表的位置靠前一点，我们就可以在显示位置里面输入一个数值，这个数值越小则显示的位置越靠前，注意这个数字必须大于0。如果有两个数值相同，这两个相同的字段位置前后顺序根据系统默认的顺序排列。如果没有设置显示数值，列表的字段排列也将使用默认的排序方式！
+
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524193451_7b1697b0a511692134da96ac53f677cf.png">
+<p align="center">字段显示位置控制演示</p>
+</div>
+
+### 列表页显示控制
+如果我们想控制会员的列表字段的查看权限，我们可以在列表页是否显示开关这儿进行控制。当关闭显示权限后，会员的列表页的表格将不会显示关闭显示的字段，也就是会员无法查看该字段的数据，可搭配模型显示详情的控制，可以实现只提供部分数据给会员查看。
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524194125_b6eeaa4772d70bb9ca4c35c4700ebf77.png">
+<p align="center">查看权限控制演示</p>
+</div>
+
+### 搜索框显示控制
+
+如果我们想控制会员的列表字段的搜索权限，我们可以在搜索框是否显示开关这儿进行控制。当关闭搜索权限后，会员的列表页的表格上方将不会显示关闭显示的字段搜索框，也就是会员无法搜索该字段的数据，可搭配模型显示详情的控制，可以实现只提供部分数据给会员查看。
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524194651_076f99255ca6cccef1cf73ce86f5e068.png">
+<p align="center">搜索权限控制演示</p>
+</div>
+
+
+### 详情页显示控制
+如果我们想控制会员的详情字段的查看权限，我们可以在详情页是否显示开关这儿进行控制。当关闭显示权限后，会员的详情页的表格将不会显示关闭显示的字段，也就是会员在详情页无法查看该字段的数据。
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524195514_a528277f989cb36d7745af2904a40b23.png">
+<p align="center">详情页显示控制演示</p>
+</div>
+
+### 添加页显示控制
+如果我们想控制会员的某个字段的添加权限，我们可以在添加页是否显示开关这儿进行控制。当关闭显示权限后，会员的添加页的表格将不会显示关闭显示的字段，也就是会员在添加页无法添加该字段的数据。
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524200106_d45f49c1534cae14f73923d2c58bf7a5.png">
+<p align="center">添加页显示控制演示</p>
+</div>
+
+### 编辑页显示控制
+如果我们想控制会员的某个字段的编辑权限，我们可以在编辑页是否显示开关这儿进行控制。当关闭显示权限后，会员的编辑页的表格将不会显示关闭显示的字段，也就是会员在编辑页无法编辑该字段的数据。
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524195815_3699ff88df21cd0e2f44b8777a98167c.png">
+<p align="center">编辑页显示控制演示</p>
+</div>
+
+### 选择合适的表单控件
+### 如何让字段显示更漂亮（格式化）
