--- a/md/03-模型配置.md
+++ b/md/03-模型配置.md
@@ -166,4 +166,21 @@
 </div>
 
 ### 选择合适的表单控件
+
+
 ### 如何让字段显示更漂亮（格式化）
+有时候，对于某些字段，如果我们只是让他原样文字输出可能没那么的直观，于是小白管家为管理员提供了字段的显示格式化配置，管理员可以根据自己的字段选择合适的格式化方式，主要提供了以下几种格式化字段形式，如果您有新的格式化需求可以联系我们！
+
+1. 原样输出（默认）
+2. 智能输出——跟随控件自动格式化
+3. 数字格式化为整数
+4. 数字格式化为人民币价格（单位为元）
+5. 数字格式化为人名币加个（单位为分）
+6. 时间格式化为日期
+7. 时间格式化为日期+时间
+8. 时间格式化为倒计时
+9. 文本格式化为网页类型（html）
+10. 文本格式化为html原代码输出：不满足原样输出
+11. 多媒体链接格式化为图片展示
+12. 多媒体链接格式化为超链接
+13. 其他格式化为布尔值
