--- a/md/04-模型数据操作.md
+++ b/md/04-模型数据操作.md
@@ -1,36 +1,94 @@
 # 运营数据中心——数据管理
 
-## 主要界面
-### 左侧模型栏
-+ 模型显示控制
-+ 模型位置控制
+## 主页
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524224749_ba878a3e0d9ce85c1178b198317b86d1.png">
+<p align="center">主页</p>
+</div>
+
+接下来来到我们的数据中心，可以看到左边是我们的模型栏，这里有我们开发者所安装和配置的模型列表。中间是欢迎页面，小白数据管家还在持续更新中，更多的强大功能，敬请期待！
+
+### 模型栏
+
++ 模型显示控制：如果不想模型在菜单栏显示，可以参考上节的模型配置，关闭显示！
++ 模型位置控制：如果想要把常用的数据模型放在菜单前面，也可以参考上节的模型配置，调整模型的位置！
+
+### 列表
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524230124_9f91666d90c425f474b5d2e88445288f.png">
+<p align="center">模型列表示例</p>
+点击菜单的模型，右边就会展示模型对应的数据列表，如图所示。接下来会详细解释列表页的每个功能！
+</div>
 
 ## 列表页
-+ 搜索框配置与权限
-+ 添加权限
-+ 编辑权限
-+ 查看详情权限
-+ 导出数据
-+ 协同开发之备注
-+ 模型控制配置
-+ 格式化界面
-+ 格式化搜索框
-+ 位置控制
-+ 显示控制
-+ 分页控制
-+ 批量删除（**危险**）
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524231726_8606ef271b6bf2d25841d700a7dabfaa.png">
+<p align="center">列表页指南</p>
+</div>
+
+### 搜索数据
+可以看到：
+1. 列表的最上面就是一系列的搜索框，通过搜索我们可以找到指定的数据
+2. 对于是否显示输入框：管理员可以参考上一节的模型字段控制进行配置
+3. 选择什么样的输入框？ 管理员可以为某个字段选择特定的搜索框，如果管理员没有配置将使用系统的默认搜索框，输入框的选择可以参考上一节的模型字段配置
+
+
+### 添加数据
+如果管理员允许添加数据（模型控制配置），可以通过点击列表页的右上方的绿色按钮添加新的数据。
+
+
+### 编辑数据
+如果管理员允许编辑数据（模型控制配置），可以通过点击列表要修改数据的右边的编辑进入编辑页编辑数据。
+
+### 查看数据
+如果管理员允许查看数据（模型控制配置），可以通过点击列表要修改数据的右边的查看进入详情页查看详细数据。
+
+### 导出数据
+1. 如果管理员允许导出数据，列表页的右上方的黄色按钮导出当前页的数据。
+2. 支持导出的数据文件格式有：
++ Excel
++ TXT
++ JSON
++ CSV
+
+
+
+
+### 删除数据（**危险**）
+如果管理员允许删除数据（模型控制配置），可以勾选需要删除的数据然后点击列表页的右下方的红色按钮删除勾选的数据。
+
+### 协同工作之备注
+1. 为了让用户之间能协同工作，互相交流，小白管家在每个模型下面提供备注功能，会员可以把自己的备注添加在下面，其他的会员查看列表页的时候就可以查看其他会员留下来的备注！
+2. 备注功能支持图片，链接，表格等网页格式的文本
 
 ## 添加页
-+ 控件配置
-+ 字段位置控制
-+ 可能出现的问题
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524234505_0ecc05d9f0416c9d3d351384f7ffc5b8.png">
+<p align="center">添加页指南</p>
+</div>
++ 管理员可以进入字段个性化配置对应的输入框
++ 管理员可以进入字段个性化配置对应输入框的位置
++ 管理员可以进入字段个性化配置对应的字段是否显示
 
 
 ## 查看页
-+ 字段个性化配置
-+ 字段的格式化配置
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524235445_ef6c5c04e5dcbdae405caa6d06ad3fd9.png">
+<p align="center">查看页指南</p>
+</div>
++ 管理员可以进入字段个性化配置对应输入框的位置
++ 管理员可以进入字段个性化配置对应的字段是否显示
++ 管理员可以进入字段个性化配置对应字段输出格式化
 
 ## 编辑页
-+ 控件配置
-+ 字段位置控制
-+ 可能出现的问题
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524235502_348d60a9ce62735e0cc0c8e0eaba6b68.png">
+<p align="center">编辑页指南</p>
+</div>
++ 管理员可以进入字段个性化配置对应的输入框
++ 管理员可以进入字段个性化配置对应输入框的位置
++ 管理员可以进入字段个性化配置对应的字段是否显示 
++ 管理员可以进入字段个性化配置对应字段输出格式化
+
