--- a/md/02-注册与登录.md
+++ b/md/02-注册与登录.md
@@ -1,9 +1,13 @@
-[toc]
+
 # 注册与登录
 
 ## 会员注册
 1. 会员的注册很简单，只需要在登录页面的下方选择**立即注册**，即可跳转至用户的注册页面（如下）。
-![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524103706_05a58bde242875650e64d0cc0c347938.png)
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524103706_05a58bde242875650e64d0cc0c347938.png">
+<p align="center">注册页面</p>
+</div>
+
 
 2. 填写您的个人资料
 + 会员账号
@@ -14,7 +18,11 @@
 
 
 3. 填写完毕后，可以看到注册成功提示，接下来可以联系您的管理员进行授权，然后就可以登录啦。
-![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524103733_8e2908c9c35c1bdfb055d7a2f94dab95.png)
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524103733_8e2908c9c35c1bdfb055d7a2f94dab95.png">
+<p align="center">注册成功页面</p>
+</div>
+
 
 
 
@@ -62,7 +70,11 @@
 ### 登录日志
 
 管理员可以进入控制面板，可以看到最近会员的登录日志，包括会员登录的时间，登录的IP地址，登录是否成功，失败或异常的提示，方便您对会员登录的管理！
-![](http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524103641_e5286f19dbe3e22570c2b6c8089b1e7d.png)
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190524103641_e5286f19dbe3e22570c2b6c8089b1e7d.png">
+<p align="center">会员登陆日志</p>
+</div>
+
 
 
 
