--- a/md/06-超级表格.md
+++ b/md/06-超级表格.md
@@ -1,69 +1,89 @@
-
 # 运营法宝②——超级表格计算
+
+
 小管家日常处理数据的时候经常会遇到这样一个问题，可查看的数据都是<font face="黑体" color=green>**不变**</font>的，但我的需求却是<font face="黑体" color=red>**不定**</font>的。比如：订单表只有单价、购买数量跟成本 ，<font face="黑体" color=red>**总价跟利润等信息**</font>经常需要我们人工计算。有时候想看一下最近一段时间的营业额<font face="黑体" color=red>**最大值，最小值，总数或者平均值**</font>，也是要掏出计算机进行一段耗时间的运算，还有可能出现差错。
 于是，  <font face="黑体" color=red> **超级表格** </font>  出现了。
-![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524101248_2cc40646d039f63f37774c3178fdf31c.png)
-![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524102905_1ca96be1304c4de36b9f465a5ecfe12b.png)
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190525005411_87c3d8b2442a3d392500716c77565055.png">
+<p align="center">超级表格处理前</p>
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190525005437_b388c5f7ae62e12abe456dc45a7a828f.png">
+<p align="center">超级表格处理后</p>
+</div>
+
 ## 超级表格配置
 
 ### 实时计算配置
 
-1. 什么是实时计算
+1. 什么是实时计算？
 添加新的实时计算后，将会在列表页数据表格右侧对应添加一列。可以对每一行的数据进行数学运算，类似Excel表格的功能，可以满足日常的统计。
 2. 如何配置实时计算 
 管理员可按下图步骤进行配置
-![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524104130_821d2dbb913131ee9d9dd1f530bb5030.jpeg)
-![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524104817_2c507e4fe9193836c5a2316b7c12bbc5.png)
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524104130_821d2dbb913131ee9d9dd1f530bb5030.jpeg">
+<p align="center">进入实时计算配置页</p>
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524104817_2c507e4fe9193836c5a2316b7c12bbc5.png">
+<p align="center">配置计算式子</p>
+</div>
+
 3. 计算公式应该如何设置
-可根据实际需求配置实时计算的数学公式，将表中红色变量名进行四则运算即可。如：order_price*order_goods_num
-4. 超级表格所支持的运算
-• 两数相加：a + b
-• 两数相减：a - b
-• 两数相乘：a * b
-• 两数相除：a / b
-• 多数相加：a + b + c + d
-• 使用括号：(a + b) * c
-• 使用常数：a + 2019
-• 更复杂的：((a + b) * (c - d) + e / f)
-**注意**
-• 目前只支持加、减、乘、除四则运算
-• 可以使用括号，但要注意对称性，只能用半角括号
-• 空格将会被忽略
-• 计算失败最终将会显示：N/A
+可根据实际需求配置实时计算的数学公式，**非常重要的一点：**配置计算式子的时候必须必须必须使用表格中红色变量名编写计算式子！！！如：order_price*order_goods_num。
+
+4. 超级表格所支持的运算：
++ 两数相加：a + b
++ 两数相减：a - b
++ 两数相乘：a * b
++ 两数相除：a / b
++ 多数相加：a + b + c + d
++ 使用括号：(a + b) * c
++ 使用常数：a + 2019
++ 更复杂的：((a + b) * (c - d) + e / f)
+
+
+**5. 注意**
++ 再次强调，计算式子配置必须使用表格中的红色变量名，否则无法进行计算
++ 目前只支持加、减、乘、除四则运算
++ 可以使用括号，但要注意对称性，只能用半角括号
++ 空格将会被忽略
++ 计算失败最终将会显示：N/A
 
 
 ### 字段汇总配置
 
-#### 什么是汇总（当前页）
-开启当前汇总后，将会在列表页的**数据表格底部**显示当前汇总情况。汇总项目包括但不限于：总和、平均数、最小值、最大值，非空条目数。
-对于数值类型的字段，可支持：
-• 当前总数
-• 当前平均数
-• 当前最大值
-• 当前最小值
-对于文本类型的字段，只支持：
-• 非空条目数量
-#### 数字类型
-![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524111228_dfe850ee5f8609a2982d8585e29449db.png)
-1. 统计总数
-计算出**当前页面**这一列的统计总数
-2. 统计平均数
-计算出**当前页面**这一列的统计平均数
-3. 统计最大值
-计算出**当前页面**这一列的统计最大值
-4. 统计最小值
-计算出**当前页面**这一列的统计最小值
-5. 注意事项
-1）如果没有配置任何汇总，最后一行不显示
-2）如需计算某一段时间的汇总可通过搜索来实现。
-3）对于有开启当前汇总的，整合全部汇总项进行显示。
+1. 什么是汇总？
+开启当前汇总后，将会在列表页的**数据表格底部**显示当前页对应字段的汇总情况。汇总项目包括但不限于：总和、平均数、最小值、最大值，非空条目数。
+
+2. 对于数值类型的字段，可支持：
++ 当前总和：计算出**当前页面**这一列对应字段的统计总和
++ 当前平均：计算出**当前页面**这一列的统计平均数
++ 当前最大：计算出**当前页面**这一列的统计最大值
++ 当前最小：计算出**当前页面**这一列的统计最小值
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190525004133_acd93a47ccebc48db11ca5405ce82481.png">
+<p align="center">数值类型汇总例子</p>
+</div>
+
+3. 对于文本类型的字段，只支持：
++ 非空条目数量：计算出**当前页面**这一列的统计总数，为空时不计。
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190525002308_a5e681eebced077b0e864909d15374d6.png">
+<p align="center">计算非空条目数量例子</p>
+</div>
 
 
-#### 非数字的类型
-![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524111948_97c92d76f1c50478fdbbd3dcaec0c268.jpeg)
-1. 汇总非空条目的数量
-计算出**当前页面**这一列的统计总数，为空时不计。
+4. 注意事项
++ 如果没有配置任何汇总，最后一行不显示
++ 如需计算某一段时间的汇总可通过搜索来实现。
++ 对于有开启当前汇总的，整合全部汇总项进行显示。
+
 
 ## 列表页
 
-配置完成后返回列表页即可看到新添加的列跟行，配置完成。![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524102905_1ca96be1304c4de36b9f465a5ecfe12b.png)
+配置完成后返回列表页，可以看到列表最右边增添了我们配置的计算式子与计算结果，在列表的最后一行添加上了我们配置的字段的汇总计算。
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190524102905_1ca96be1304c4de36b9f465a5ecfe12b.png">
+<p align="center">列表页展示</p>
+</div>
