--- a/md/03-模型配置.md
+++ b/md/03-模型配置.md
@@ -166,6 +166,76 @@
 </div>
 
 ### 选择合适的表单控件
+为了让用户更方便地添加数据，小白管家提供了以下几种控件选项
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190525100255_b7af1adbb1ae426e3284c36dc2e7d4d9.png">
+<p align="center">表单控件演示</p>
+</div>
+1.输入提示与默认值
+
+输入提示将会显示在输入控件的下面，配置了这个提示，在添加，编辑页该字段的输入框下面将会多一行提示。
+默认值将会显示在输入控件的里面。优先级是：用户输入 -> 管理员默认值 -> 开发者默认值。例如
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190525101342_848697a849c3ba8c27d9a5d1d8443106.png">
+<p align="center">输入提示与默认值演示</p>
+</div>
+2.输入控件类型-用户添加神器
+
+在添加数据的时候运用一些方便客户的控件会让我们的应用更受欢迎！小白君提供了下面几种控件供大家选择！
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190525102140_64451ef10ea8aa86dae76a4e8ede7975.png">
+<p align="center">输入提示与默认值演示</p>
+</div>
+①智能控件：会根据字段类型自动匹配控件：如日期类型的会匹配日期控件，文本类型的会匹配富文本控件，如图
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190525104047_e39818f5446ad1618e74105a6c5ccfad.png">
+<p align="center">智能控件演示</p>
+</div>
+②常规输入框：最常规的输入控件
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190525104303_eac7bb708140886eae25932ce58c063c.png">
+<p align="center">常规输入框演示</p>
+</div>
+③普通文本输入框：文本型输入控件，行数相对更多
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190525104823_a71ab662ed8100e63d77f5291a0d2a9e.png">
+<p align="center">普通文本输入框演示</p>
+</div>
+③富文本输入框：更强大的文本输入控件！支持字体样式设置即图片，表情等输入，最后会转化成HTML格式传进模型。
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190525105803_fddeb55c5c620807c65eee940aefd451.png">
+<p align="center">普通文本输入框演示</p>
+</div>
+④下拉列表：点击下拉列表后会有一个“控件配置”，每一行一份配置，每份配置格式：值，显示内容。值是最终保存的数据，显示内容是界面的显示内容，中间使用逗号隔开。如：
+
+“1，是
+
+0，否”会显示下拉选项是，否。选择‘是’时会存1进模型如图
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190525110247_2750e0699d97b1f0e9f7b0933a864869.png">
+<p align="center">下拉列表演示</p>
+</div>
+
+⑤开关：最炫控件！开关！默认开存‘1’，关存‘0’，可修改。如图
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190525110628_6d85601ebc515a023c6d86b3c9bf1d58.png">
+<p align="center">开关演示</p>
+</div>
+⑤单选框：单选框默认选择时存‘1’，不选时存‘0’，可修改。如图
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190525110815_5b7c23bfe80badbe30007b58f3a78f95.png">
+<p align="center">单选框演示</p>
+</div>
+⑥密码输入框：输入时类似账号密码输入，别人看不到输入内容。如图
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190525111219_7e65b503aac7da74658d3393461718e4.png">
+<p align="center">密码输入框演示</p>
+</div>
 
 
 ### 如何让字段显示更漂亮（格式化）
