--- a/md/03-模型配置.md
+++ b/md/03-模型配置.md
@@ -263,16 +263,30 @@
 
 2. 智能输出——跟随控件自动格式化
 
+> 当控件类型为智能控件，或未配置时，小白管家将根据字段的数据类型，进行自动匹配和格式化。如：日期类型会以相应日期类型输出，文本类型会以Html格式输出。
+> 当控件类型选定时，小白管家会根据控件类型选定相应的数据类型。如：富文本编辑器会以Html格式输出，下拉列表各个选项会以不同的标签样式输出。
+总之选定了智能控件会极大地贴合用户习惯对数据进行格式化处理！
 
 3. 数字格式化为整数
 
 > 显示格式会将字段格式化为整数，如12.3会格式化为12!<br>
 > <span style='color: #ff5000'>请注意：如果字段不为数字会原样输出！！！</span>
 
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190525140504_1364fcd1bd07b3f0c5558b309a6f638d.png">
+<p align="center">格式化为整数</p>
+</div>
+
 4. 数字格式化为百分比
 
 > 显示格式会将字段格式化为百分数，如0.88会格式化为88%!<br>
 > <span style='color: #ff5000'>请注意：如果字段不为数字会原样输出！！！</span>
+
+
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190525140518_89a4a80159b334758a5e06cd5ef40d13.png">
+<p align="center">格式化百分比</p>
+</div>
 
 
 5. 数字格式化为人民币价格（单位为元）
@@ -302,11 +316,17 @@
 > 显示格式会将字段格式化为日期，如2019-05-13 16:30:30会格式化为2019-05-13!<br>
 > <span style='color: #ff5000'>请注意：如果字段不符合格式会原样输出！！！<span>
 
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190525143337_e5e2f057fcfff4677a285392cedb3941.png">
+<p align="center">格式化为日期</p>
+</div>
+
 8. 时间格式化为日期+时间
 
 > 显示格式会将字段格式化为日期+时间<br>
 > 如2019-05-13 16:30:30会格式化为2019-05-13 16:30:30!<br>
 > <span style='color: #ff5000'>请注意：如果字段不符合格式会原样输出！！！</span>
+
 
 
 9. 时间格式化为倒计时
@@ -315,11 +335,16 @@
 > <span style='color: #ff5000'>请注意：如果字段不符合格式会原样输出！！！</span>
 
 
+
 10. 文本格式化为网页类型（html）
 
 > 显示格式会将文本转化为HTML富文本!<br>
 > <span style='color: #ff5000'>请注意：如果字段不符合格式会原样输出！！！</span>
 
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190525141607_c64babff11518e7dd144cfd398c41fb9.png">
+<p align="center">格式化网页格式</p>
+</div>
 
 11. 文本格式化为html原代码输出：不满足原样输出
 
@@ -327,13 +352,21 @@
 > <span style='color: #ff5000'>请注意：如果字段不符合格式会原样输出！！！</span>
 
 
-12. 多媒体链接格式化为图片展示
+12.  多媒体链接格式化为图片展示
 > 显示格式会将多媒体转化为图像!
 
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190525140438_53a9139cbe6d9ac5e809fd07f57cefb0.png">
+<p align="center">图片展示</p>
+</div>
 
 13. 多媒体链接格式化为超链接
   
-> 显示格式会将转化为超链接!
+> 显示格式会将转化为超链接，可以点击进入!
 
+<div align="center">
+<img src="http://cdn7.okayapi.com/89E670FD80BA98E7F7D7E81688123F32_20190525140413_94fca3acefdffdf8d77600f2095dd7a6.png">
+<p align="center">格式化超链接</p>
+</div>
 
 14. 其他格式化为布尔值
