--- a/md/03-模型配置.md
+++ b/md/03-模型配置.md
@@ -258,16 +258,16 @@
 ### 如何让字段显示更漂亮（格式化）
 有时候，对于某些字段，如果我们只是让他原样文字输出可能没那么的直观，于是小白管家为管理员提供了字段的显示格式化配置，管理员可以根据自己的字段选择合适的格式化方式，主要提供了以下几种格式化字段形式，如果您有新的格式化需求可以联系我们！
 
-1. 原样输出：管家默认输出方式，不格式化显示，原样输出！
++ 原样输出：管家默认输出方式，不格式化显示，原样输出！
 
 
-2. 智能输出——跟随控件自动格式化
++ 智能输出——跟随控件自动格式化
 
 > 当控件类型为智能控件，或未配置时，小白管家将根据字段的数据类型，进行自动匹配和格式化。如：日期类型会以相应日期类型输出，文本类型会以Html格式输出。
 > 当控件类型选定时，小白管家会根据控件类型选定相应的数据类型。如：富文本编辑器会以Html格式输出，下拉列表各个选项会以不同的标签样式输出。
 总之选定了智能控件会极大地贴合用户习惯对数据进行格式化处理！
 
-3. 数字格式化为整数
++ 数字格式化为整数
 
 > 显示格式会将字段格式化为整数，如12.3会格式化为12!<br>
 > <span style='color: #ff5000'>请注意：如果字段不为数字会原样输出！！！</span>
@@ -277,7 +277,7 @@
 <p align="center">格式化为整数</p>
 </div>
 
-4. 数字格式化为百分比
++ 数字格式化为百分比
 
 > 显示格式会将字段格式化为百分数，如0.88会格式化为88%!<br>
 > <span style='color: #ff5000'>请注意：如果字段不为数字会原样输出！！！</span>
@@ -289,7 +289,7 @@
 </div>
 
 
-5. 数字格式化为人民币价格（单位为元）
++ 数字格式化为人民币价格（单位为元）
 
 > <b>显示格式会将字段格式化为人民币价格，</b><br>
 > <b>如123会格式化为<span style='color: #ff5000'>￥123.00<span></b>
@@ -301,7 +301,7 @@
 
 
 
-6. 数字格式化为人名币价格（单位为分）
++ 数字格式化为人名币价格（单位为分）
 
 > <b>显示格式会将字段格式化为人民币价格，但原来单位为分</b><br> 
 > <b>如9900分会格式化为<span style='color: #ff5000'>￥99.00<span></b>
@@ -312,7 +312,8 @@
 </div>
 
 
-7. 时间格式化为日期
++ 时间格式化为日期
+
 > 显示格式会将字段格式化为日期，如2019-05-13 16:30:30会格式化为2019-05-13!<br>
 > <span style='color: #ff5000'>请注意：如果字段不符合格式会原样输出！！！<span>
 
@@ -321,7 +322,7 @@
 <p align="center">格式化为日期</p>
 </div>
 
-8. 时间格式化为日期+时间
++ 时间格式化为日期+时间
 
 > 显示格式会将字段格式化为日期+时间<br>
 > 如2019-05-13 16:30:30会格式化为2019-05-13 16:30:30!<br>
@@ -329,14 +330,14 @@
 
 
 
-9. 时间格式化为倒计时
++ 时间格式化为倒计时
 
 > 显示格式会将字段时间格式化为距离现在时间，如一天后，一小时前!<br>
 > <span style='color: #ff5000'>请注意：如果字段不符合格式会原样输出！！！</span>
 
 
 
-10. 文本格式化为网页类型（html）
++ 文本格式化为网页类型（html）
 
 > 显示格式会将文本转化为HTML富文本!<br>
 > <span style='color: #ff5000'>请注意：如果字段不符合格式会原样输出！！！</span>
@@ -346,13 +347,14 @@
 <p align="center">格式化网页格式</p>
 </div>
 
-11. 文本格式化为html原代码输出：不满足原样输出
++ 文本格式化为html原代码输出：不满足原样输出
 
 > 显示格式会将文本转化为HTML纯文本,原样输出对应的html代码!<br>
 > <span style='color: #ff5000'>请注意：如果字段不符合格式会原样输出！！！</span>
 
 
-12.  多媒体链接格式化为图片展示
++ 多媒体链接格式化为图片展示
+
 > 显示格式会将多媒体转化为图像!
 
 <div align="center">
@@ -360,7 +362,7 @@
 <p align="center">图片展示</p>
 </div>
 
-13. 多媒体链接格式化为超链接
++ 多媒体链接格式化为超链接
   
 > 显示格式会将转化为超链接，可以点击进入!
 
@@ -369,4 +371,4 @@
 <p align="center">格式化超链接</p>
 </div>
 
-14. 其他格式化为布尔值
++ 其他格式化为布尔值
