--- a/md/01-介绍.md
+++ b/md/01-介绍.md
@@ -14,4 +14,4 @@
 首次使用，请用管理员登录！管理员拥有小白管家全部权限；普通会员需要管理员授权后方可登录使用。查看我的管理员和普通会员
 ## 联系方式
 扫码添加小白君！即刻获取更多小白管家相关资讯！
-![在这里插入图片描述](http://cdn7.okayapi.com/0D19F4F8568B4232213F87FC45C03253_20190522225055_67f68dbbb8a9f9e6cf52b04f48fbe3a1.jpeg)
+![在这里插入图片描述](http://cd7.yesapi.net/89E670FD80BA98E7F7D7E81688123F32_20190716014246_56744e772a9dea573389179ecb239753.jpeg)
